--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,13 @@
 * {
   font-family: "poppins";
 }
+
+html {
+  max-width: 100%;
+}
+
+body {
+  min-height: 100vh;
+  width: 100vh;
+  overflow-x: hidden;
+}
