About Page + Unsave News + Bugs fixed + Navbar navigation Context

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -16,3 +16,18 @@ body {
   width: 100vh;
   overflow-x: hidden;
 }
+@keyframes updown {
+  0% {
+    transform: translateY(-15px);
+  }
+  50% {
+    transform: translateY(15px);
+  }
+  100% {
+    transform: translateY(-15px);
+  }
+}
+
+.animate-up-down {
+  animation: updown 2s ease-in-out infinite;
+}
